# daria

./: .gitignore  README.md  pyproject.toml  setup.py
daria/instruments/: __init__.py  spherex.py
daria/models/: __init__.py  errorrlz.py  model_tools.py  toyemissionlineuniverse.py  toygalaxypopulation.py
daria/stats/: fitting.py
daria/utils/: __init__.py
scripts/: fit_multiline_lfs.py
src/daria/instruments/: __init__.py  desi.py  euclid.py
src/daria/instruments/data/: SPHEREx_1sigma_noise.txt
src/daria/line_lfs/: __init__.py  comparat16.py  covelopaz25.py  favole24.py  hizels.py  khostovan15.py  pang26.py  sobral13.py
src/daria/line_lfs/data/comparat16/: H1_4862-data-summary-Planck15.txt  O2_3728-data-summary-Planck15.txt  O3_5007-data-summary-Planck15.txt
src/daria/line_lfs/data/favole24/: composite_intrinsic_lfs.txt  composite_observed_lfs.txt  full_intrinsic_lfs.txt  full_observed_lfs.txt  liner_intrinsic_lfs.txt  liner_observed_lfs.txt  passive_intrinsic_lfs.txt  passive_observed_lfs.txt  seyfert_intrinsic_lfs.txt  seyfert_observed_lfs.txt  sf_bpt_intrinsic_lfs.txt  sf_bpt_observed_lfs.txt  sf_ssfr_intrinsic_lfs.txt  sf_ssfr_observed_lfs.txt
src/daria/models/: __init__.py  cosmo_tools.py  helgason.py  model_tools.py  toyemissionlineuniverse.py  toygalaxypopulation.py
src/daria/stats/: __init__.py  fitting.py  moveassembler.py
src/daria/utils/: __init__.py  constants.py  line_info.py  lineardatabinner.py
