[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daria"
version = "1.0.0"
readme = "README.md"
requires-python = ">3.12"

authors = [
 { name = "Mary Minasyan", email = "minasyan@caltech.edu" }
]

dependencies = [
  "numpy >= 1.24.3",
  "scipy >= 1.10.1",
  "astropy >= 5.3",
  "matplotlib",
  "ipykernel",
  "hmf",
  "dust_attenuation @ git+https://github.com/karllark/dust_attenuation.git",
  "emcee >= 3.1.6"
]

[project.urls]
Homepage = "https://github.com/maryminasyan/daria"
Repository = "https://github.com/maryminasyan/daria"
Issues = "https://github.com/maryminasyan/daria/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]